# poc_rust_rusteron

./: Cargo.toml  RUSTERON_POC_REPORT.md  build.rs
docs/: AERON_GUIDE.md  README.md
docs/superpowers/specs/: 2026-03-20-rusteron-udp-benchmark-design.md
schemas/: bench.xml
src/: bench.rs  client.rs  driver.rs  lib.rs  main.rs  protocol.rs  protocol_sbe.rs  server.rs  stats.rs
tests/: integration.rs
