[package]
name = "rusteron-bench"
version = "0.1.0"
edition = "2021"

[lib]
name = "rusteron_bench"
path = "src/lib.rs"

[[bin]]
name = "rusteron-bench"
path = "src/main.rs"

[dependencies]
rusteron-client = { version = "0.1", features = ["static"] }
rusteron-media-driver = { version = "0.1", features = ["static"] }
clap = { version = "4", features = ["derive"] }
hdrhistogram = "7"
ctrlc = "3"
ironsbe-core = "0.2.0"

[build-dependencies]
ironsbe-codegen = "0.2.0"
